@@ -205,6 +205,19 @@ module Gem
   private_class_method :all_partials
 
   ##
+  # See if a given gem is available.
+  
+  def self.available?(gem, *requirements)
+    requirements = Gem::Requirement.default if requirements.empty?
+    
+    unless gem.respond_to?(:name) && gem.respond_to?(:version_requirements) 
+      gem = Gem::Dependency.new(gem, requirements)
+    end
+    
+    !Gem.source_index.search(gem).empty?
+  end
+  
+  ##
   # The mode needed to read a file as straight binary.
 
   def self.binary_mode
